--- a/frontend-web/exercises/h4/oef1/src/app/app.component.html
+++ b/frontend-web/exercises/h4/oef1/src/app/app.component.html
@@ -2,9 +2,10 @@
   <h1>Welcome to Hell!</h1>
   <input type="text" [(ngModel)]="username" placeholder="Enter your username">
   <p>Your username is: {{ username }}</p>
-  <button [disabled]="username === ''" (click)="clearUsername()">Clear Username</button>
+  <button *ngIf="username !== ''" (click)="clearUsername()">Clear Username</button>
 </div>
 
+<app-calculator></app-calculator>
 
 
 
